# django-crm

./: .env.sample  .gitignore  README.md  pyproject.toml
django/: manage.py
django/agents/: forms.py  models.py  urls.py  views.py
django/agents/migrations/: 0001_initial.py  0002_initial.py
django/base/: admin.py  forms.py  mixins.py  models.py  views.py
django/base/migrations/: 0001_initial.py
django/category/: forms.py  models.py  urls.py  views.py
django/category/migrations/: 0001_initial.py
django/crm/: asgi.py  urls.py  wsgi.py
django/crm/settings/: base.py  prod.py
django/leads/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
django/leads/migrations/: 0001_initial.py  0002_lead_category.py  0003_alter_lead_category.py  0004_auto_20221023_1411.py
django/meeting/: urls.py  utils.py  views.py
django/meeting/websocket/: consumers.py  routing.py
django/payment/: urls.py  views.py
django/punching/: apps.py  urls.py  views.py
django/static/css/: styles.scss
django/templates/: base.html  footer.html  landing.html  navbar.html
django/templates/agents/: agents_create.html  agents_detail.html  agents_list.html  agents_update.html
django/templates/category/: categories_create.html  categories_detail.html  categories_list.html  categories_update.html
django/templates/crm/: base.html  navbar.html
django/templates/leads/: _form.html  assign_agent.html  leads_create.html  leads_detail.html  leads_list.html  leads_update.html
django/templates/meeting/: base.html  entrance.html  room.html  sidebar.html
(+30 files in other folders)
