[tool.poetry]
name = "django-crm"
version = "0.1.0"
description = ""
authors = ["Neo <eyywqkgb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.5"
django-environ = "^0.9.0"
libsass = "^0.21.0"
django-compressor = "^4.1"
django-sass-processor = "^1.2.1"
Pillow = "^9.2.0"
stripe = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
